Fix for Search form and alignment.

--- a/DDApp/Apps/global/Styles/Search.scss
+++ b/DDApp/Apps/global/Styles/Search.scss
@@ -1,39 +1,39 @@
 @import "_variables.scss";
 
 .Search {
-    display: grid;
-    grid-template-rows: 100%;
+    grid-template-rows: auto;
+    grid-template-columns: auto;
     height: 100vh;
-    max-width: 100%;
     align-items: center;
-    background-color: #ecebea;    
+    background-color: #ecebea;
     font-family: $SemiBold;
 
     form {
-        display: inline-grid;
         grid-template-rows: 45% 55%;
-        height: auto;
+        grid-template-rows: 50% 50%;
+        grid-template-columns: 90%;
         align-self: baseline;
-        align-items: center;
         justify-items: baseline;
         align-items: center;
         height: 17vh;
         max-height: 17.3vh;
     }
 
-    i {
-        padding: 3vw 3vw 3vw 3vw;
-        font-size: 5.5vh;
-        color: $AccentColor;
-    }
-
     span {
         color: $TextColor;
         font-size: 3.0vh;
-        padding-left: 3vw;
         padding-bottom: 1vh;
         padding-top: 1vh;
         display: block;
+        margin: 0 auto;
+        width: 90%;
+    }
+
+    button[type="submit"] i, i {
+        align-self: center;
+        padding: 3vw 3vw 3vw 3vw;
+        font-size: 5.5vh;
+        //color: $AccentColor;
     }
 
     .input-container {
@@ -44,6 +44,16 @@
         margin: 0vh auto;
         background-color: $BaseColor;
         box-shadow: inset 0vw 1vw 1vw #d4d4d4;
+        max-width: 90%;
+        margin: 0 auto;
+        max-height: 60%;
+        align-self: center;
+    }
+
+    button[type="submit"] {
+        background: none;
+        border: none;
+        align-self: center;
     }
 
     .input-field {
